feito o article do site e foi começado a section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="layout-grid header-flex">
             <div>
                 <nav>
-                    <a href="">inicio</a>
+                    <a href="">início</a>
                     <a href="">sobre</a>
                     <a href="">desafios</a>
                     <a href="">endereços</a>
@@ -24,6 +24,22 @@
     </header>
 
     <main>
+        <article class="banner">
+            <div class="layout-grid flex">
+                <h1 id="h1main">desenvolvimento<br> de sistemas 2023</h1>
+                <h2 id="h2main">senai informática</h2>
+                <img id="mouse-yellow" src="landing-page\assets\images\mouse.svg" alt="Mouse yellow">
+            </div>
+        </article>
+
+        <section>
+            <div class="layout-grid">
+                <h1 id="h1section">sobre os projetos</h1>
+                <img src="landing-page\assets\images\imagem-seção-sobre.png" alt="imagem seção sobre">
+                <h3>participantes</h3>
+            </div>
+
+        </section>
 
     </main>
 
