--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             <div class="layout-grid">
                 <h1 id="h1section">sobre os projetos</h1>
                 <img src="landing-page\assets\images\imagem-seção-sobre.png" alt="imagem seção sobre">
-                <h3>participantes</h3>
+                <h3 class="h3">participantes</h3>
+                <h4 class="h4">mais de 80 alunos organizados em 16 grupos</h4>
             </div>
 
         </section>
