--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!-- SECTION Sobre Projetos -->
 
-        <section id="height1">
+        <section>
 
             <div class="layout-grid">
 
@@ -49,7 +49,7 @@
 
                 <div class="spacebetween">
 
-                    <img id="imgmouse" src="landing-page\assets\images\imagem-seção-sobre.png"
+                    <img src="landing-page\assets\images\imagem-seção-sobre.png"
                         alt="uma pessoa palestrando para outras pessoas sentadas em um sofá">
 
                     <article id="box2">
