todos os projetos finalizados desktop e mobile

--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto DEV</title>
-    <link rel="stylesheet" href="landing-page/css/styles.css">
+    <title>Projeto DEV Desktop</title>
+    <link rel="stylesheet" href="../landing-page/css/styles.css">
 </head>
 
 <body>
@@ -33,7 +33,7 @@
             <div class="layout-grid flex">
                 <h1 id="h1main">desenvolvimento<br> de sistemas 2023</h1>
                 <h2 id="h2main">senai informática</h2>
-                <img id="mouse-yellow" src="landing-page\assets\images\mouse.svg" alt="Mouse yellow">
+                <img id="mouse-yellow" src="../landing-page/assets/images/mouse.svg" alt="Mouse amarelo">
             </div>
         </article>
 
@@ -49,7 +49,7 @@
 
                 <div class="between">
 
-                    <img src="landing-page\assets\images\imagem-seção-sobre.png"
+                    <img src="../landing-page\assets\images\imagem-seção-sobre.png"
                         alt="uma pessoa palestrando para outras pessoas sentadas em um sofá">
 
                     <article id="box2">
@@ -121,7 +121,7 @@
 
                 <p id="address">Alameda Barão de Limeira, 539<br> Santa Cecilia, São Paulo - SP<br> CEP: 01202-001</p>
 
-                <img id="map" src="landing-page\assets\images\mapa.png" alt="Um pequeno mapa das proximidades">
+                <img id="map" src="../landing-page\assets\images\mapa.png" alt="Um pequeno mapa das proximidades">
 
             </div>
             
