--- a/landing-page/index.html
+++ b/landing-page/index.html
@@ -22,6 +22,7 @@
                     <a href="">desafios</a>
                     <a href="">endereços</a>
                 </nav>
+                <img src="../landing-page/assets/icons/menu sanduiche.svg" id="menu-mobile" alt="abrir o menu mobile">
             </div>
         </div>
     </header>
