adicionado o logotipo da empresa

--- a/index.html
+++ b/index.html
@@ -15,17 +15,19 @@
 
     <header>
         <div class="layout-grid header-flex">
+            <img id="logotipo" src="../Projeto-DEV-HTML-CSS/assets/images/logotipo.svg"
+                alt="Logotipo da empresa, escrito landing page.">
             <div>
+                <img src="../Projeto-DEV-HTML-CSS/assets/icons/menu sanduiche.svg" id="menu-mobile"
+                    alt="abrir o menu mobile" onclick="mostrarmenu()">
+                </div>
                 <nav id="navmenu">
                     <a href="">início</a>
                     <a href="">sobre</a>
                     <a href="">desafios</a>
                     <a href="">endereços</a>
                 </nav>
-                <img src="../Projeto-DEV-HTML-CSS/assets/icons/menu sanduiche.svg" id="menu-mobile"
-                    alt="abrir o menu mobile" onclick="mostrarmenu()">
             </div>
-        </div>
     </header>
 
     <!-- ARTICLE Desenvolvimento de sistemas -->
@@ -127,7 +129,8 @@
                 <h4 class="modelh4">endereço:</h4>
 
 
-                <p class="address">Alameda Barão de Limeira, 539<br> Santa Cecilia, São Paulo - SP<br> CEP: 01202-001</p>
+                <p class="address">Alameda Barão de Limeira, 539<br> Santa Cecilia, São Paulo - SP<br> CEP: 01202-001
+                </p>
 
                 <img id="map" src="../Projeto-DEV-HTML-CSS/assets/images/mapa.png"
                     alt="Um pequeno mapa das proximidades">
@@ -135,7 +138,7 @@
             </div>
 
         </section>
-        
+
         <div>
             <p class="copyright">Copyright © 2020 - Escola Senai de Informática</p>
         </div>
